--- a/style.css
+++ b/style.css
@@ -2,19 +2,60 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    width: 100%;
   }
 li {
-    display: inline;
+    float: left;
 }
-# footer {
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+li a:hover {
+    background-color: #555;
+    color: white;
+  }
+li a:active {
+    background-color: #000000;
+    color: #ffffff;
+}
+#footer {
+    background-color: cyan;
+}
+#topmenu {
+    position: fixed; 
+    top: 0px;
+    height: 50px;
+    background-color:#f1f1f1;
+}
+#footermenu {
+    position: fixed;
+    bottom: 0px;
+    height: 50px;
     background-color: #f1f1f1;
 }
-.rightlink {
-    float: right;
-    color: red;
-
+#content {
+    position: relative;
+    top: 0px;
+    bottom: 0px;
+    background: url("creamfloral.jpg");
+    background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+    height: 90%;
 }
-.leftlink {
+#content h1 , h2{
+    position: middle;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.textcontent {
+    position: absolute;
     float: left;
-    color: cyan;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
